feat: database module

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,8 @@
 [mypy]
 exclude = build|setup.py
 
+# cloudevents package has no types
+ignore_missing_imports = True
+
 [mypy-yaml.*]
 ignore_missing_imports = True
