--- a/example/functions/requirements.txt
+++ b/example/functions/requirements.txt
@@ -1,3 +1,3 @@
 # firebase-functions-python
 ./../../
-# git+https://github.com/invertase/firebase-functions-python2.git@5-database#egg=firebase-functions
+# git+https://github.com/firebase/firebase-functions-python.git@main#egg=firebase-functions
