fix: mypy duplicate main

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
-exclude = build|setup.py
+
+exclude = build|setup.py|venv|samples
 
 # cloudevents package has no types
 ignore_missing_imports = True
