--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,7 @@ exclude = build|setup.py|venv|samples
 
 # cloudevents package has no types
 ignore_missing_imports = True
+enable_incomplete_feature = Unpack
 
 [mypy-yaml.*]
 ignore_missing_imports = True
