--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask>=2.2.2
 PyYAML>=6.0
 pytest>=7.1.2
 setuptools>=63.4.2
-pylint>=2.15.3
+pylint>=2.15.10
 pytest-cov>=3.0.0
-mypy>=0.971
+mypy>=0.991
+yapf>=0.32.0
