fix: mypy duplicate modules warning

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,5 @@
 [mypy]
-
-exclude = build|setup.py|venv|samples
+exclude = build|setup.py|venv
 
 # cloudevents package has no types
 ignore_missing_imports = True
