--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,11 +22,15 @@ jobs:
           python-version: ${{ matrix.python }}
       - name: Install dependencies
         run: |
-          python setup.py install
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python3.10 -m venv venv
+          source venv/bin/activate 
+          pip3 install --upgrade pip 
+          python3.10 -m pip install -r requirements.txt
+          python3.10 setup.py install
       - name: Test with pytest & coverage
-        run: python -m pytest --cov=src --cov-report term --cov-report html --cov-report xml
+        run: |
+          source venv/bin/activate
+          python3.10 -m pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
       # TODO requires activation for this repository on codecov website first.
       # - name: Upload coverage to Codecov
       #   uses: codecov/codecov-action@v3
@@ -41,9 +45,16 @@ jobs:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python3.10 -m venv venv
+          source venv/bin/activate 
+          pip3 install --upgrade pip 
+          python3.10 -m pip install -r requirements.txt
+          python3.10 setup.py install
       - name: Lint with pylint
-        run: pylint $(git ls-files '*.py')
+        run: |
+          source venv/bin/activate
+          python3.10 -m pylint $(git ls-files '*.py')
       - name: Lint with mypy
-        run: python -m mypy .
+        run: |
+          source venv/bin/activate
+          python3.10 -m mypy .
