--- a/samples/basic_db/firebase.json
+++ b/samples/basic_db/firebase.json
@@ -2,7 +2,10 @@
   "functions": [
     {
       "source": "functions",
-      "codebase": "default"
+      "codebase": "default",
+      "ignore": [
+        "venv"
+      ]
     }
   ]
 }
