--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,3 +84,23 @@ jobs:
         with:
           name: reference-docs
           path: ./docs/build/
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python3.10 -m venv venv
+          source venv/bin/activate 
+          pip3 install --upgrade pip 
+          python3.10 -m pip install -r requirements.txt
+          python3.10 setup.py install
+      - name: Check Formatting
+        run: |
+          source venv/bin/activate
+          yapf -d -r -p .
