--- a/samples/basic_tasks/functions/requirements.txt
+++ b/samples/basic_tasks/functions/requirements.txt
@@ -1,5 +1,8 @@
-# firebase-functions-python
-git+https://github.com/invertase/firebase-functions-python2.git@10-tasks#egg=firebase-functions
-# ../../../
+# Not published yet,
+# firebase-functions-python >= 0.0.1
+# so we use a relative path during development:
+./../../../
+# Or switch to git ref for deployment testing:
+# git+https://github.com/firebase/firebase-functions-python.git@main#egg=firebase-functions
+
 firebase-admin >= 6.0.1
-google-cloud-tasks
