--- a/samples/basic_tasks/functions/requirements.txt
+++ b/samples/basic_tasks/functions/requirements.txt
@@ -6,3 +6,4 @@
 # git+https://github.com/firebase/firebase-functions-python.git@main#egg=firebase-functions
 
 firebase-admin >= 6.0.1
+google-cloud-tasks >= 2.13.1
