Temporarily enable publish job for debugging.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -71,10 +71,11 @@ jobs:
     #   2. to the master branch
     #   3. with the label 'release:publish', and
     #   4. the title prefix '[chore] Release '.
-    if: github.event.pull_request.merged &&
-      github.ref == 'master' &&
-      contains(github.event.pull_request.labels.*.name, 'release:publish') &&
-      startsWith(github.event.pull_request.title, '[chore] Release ')
+    # if: github.event.pull_request.merged &&
+    #   github.ref == 'master' &&
+    #   contains(github.event.pull_request.labels.*.name, 'release:publish') &&
+    #   startsWith(github.event.pull_request.title, '[chore] Release ')
+    if: (github.event.pull_request.merged && contains(github.event.pull_request.labels.*.name, 'release:publish'))
 
     runs-on: ubuntu-latest
 
@@ -92,21 +93,22 @@ jobs:
       id: preflight
       run: ./.github/scripts/publish_preflight_check.sh
 
-    - name: Create release tag
-      # Skip creating a release tag for prereleases
-      if: (!contains(github.event.pull_request.labels.*.name, 'release:prerelease'))
-      uses: elgohr/Github-Release-Action@v4
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ steps.preflight.outputs.version }}
-        release_name: Firebase Functions Python SDK ${{ steps.preflight.outputs.version }}
-        body: ${{ steps.preflight.outputs.changelog }}
-        draft: false
-        prerelease: false
+    # - name: Create release tag
+    #   # Skip creating a release tag for prereleases
+    #   if: (!contains(github.event.pull_request.labels.*.name, 'release:prerelease'))
+    #   uses: elgohr/Github-Release-Action@v4
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     tag_name: ${{ steps.preflight.outputs.version }}
+    #     release_name: Firebase Functions Python SDK ${{ steps.preflight.outputs.version }}
+    #     body: ${{ steps.preflight.outputs.changelog }}
+    #     draft: false
+    #     prerelease: false
 
     - name: Publish to Pypi
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: firebase
         password: ${{ secrets.PYPI_PASSWORD }}
+        repository-url: https://test.pypi.org/legacy/
