--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -88,6 +88,7 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: dist
+        path: dist
 
     - name: Publish preflight check
       id: preflight
