--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -74,7 +74,7 @@ jobs:
     if: github.event.pull_request.merged &&
       github.ref == 'main' &&
       contains(github.event.pull_request.labels.*.name, 'release:publish') &&
-      startsWith(github.event.pull_request.title, '[chore] Release ')
+      startsWith(github.event.pull_request.title, 'chore: Release ')
 
     runs-on: ubuntu-latest
 
