--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -71,11 +71,11 @@ jobs:
     #   2. to the main branch
     #   3. with the label 'release:publish', and
     #   4. the title prefix 'chore: Release '.
-    if: >
-      github.event.pull_request.merged &&
-      github.ref == 'main' &&
-      contains(github.event.pull_request.labels.*.name, 'release:publish') &&
-      startsWith(github.event.pull_request.title, 'chore: Release ')
+    # if: >
+    #   github.event.pull_request.merged &&
+    #   github.ref == 'main' &&
+    #   contains(github.event.pull_request.labels.*.name, 'release:publish') &&
+    #   startsWith(github.event.pull_request.title, 'chore: Release ')
 
     runs-on: ubuntu-latest
 
