Let's not publish.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -112,4 +112,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: firebase
-        password: ${{ secrets.PYPI_PASSWORD }}
+        password: "abc"
