--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -64,8 +64,18 @@ jobs:
         name: dist
         path: dist/
 
-  publish_release:
+  publish_check:
     needs: stage_release
+    steps:
+      - name: Check publish conditions
+        id: publish-checks
+        run: |
+          echo "should_run=true" >> $GITHUB_OUTPUT
+
+
+
+  publish_release:
+    needs: publish_check
 
     # Check whether the release should be published. We publish only when the trigger PR is
     #   1. merged
@@ -74,7 +84,7 @@ jobs:
     #   4. the title prefix 'chore: Release '.
     if: >
       github.event.pull_request.merged &&
-      github.ref == 'main' &&
+      github.ref == 'refs/heads/master' &&
       contains(github.event.pull_request.labels.*.name, 'release:publish') &&
       startsWith(github.event.pull_request.title, 'chore: Release ')
 
