--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -74,7 +74,7 @@ jobs:
     #   4. the title prefix 'chore: Release '.
     if: >
       github.event.pull_request.merged &&
-      github.ref == 'main' &&
+      github.ref == 'refs/heads/main' &&
       contains(github.event.pull_request.labels.*.name, 'release:publish') &&
       startsWith(github.event.pull_request.title, 'chore: Release ')
 
