--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: ["3.10"]
+        python: ["3.10", "3.12"]
 
     steps:
       - uses: actions/checkout@v3
@@ -22,14 +22,14 @@ jobs:
           python-version: ${{ matrix.python }}
       - name: Install dependencies
         run: |
-          python3.10 -m venv venv
+          python${{ matrix.python }} -m venv venv
           source venv/bin/activate 
           pip3 install --upgrade pip 
-          python3.10 -m pip install -e ".[dev]"
+          python${{ matrix.python }} -m pip install -e ".[dev]"
       - name: Test with pytest & coverage
         run: |
           source venv/bin/activate
-          python3.10 -m pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
+          python${{ matrix.python }} -m pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
       # TODO requires activation for this repository on codecov website first.
       # - name: Upload coverage to Codecov
       #   uses: codecov/codecov-action@v3
