--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,5 @@ doc/dist
 .vscode/*
 !.vscode/settings.json
 integration_tests/serviceAccount.json
+integration_tests/functions/firebase_functions_*.tar.gz
+integration_tests/functions/requirements.txt
