--- a/integration_tests/.env.example
+++ b/integration_tests/.env.example
@@ -2,8 +2,7 @@ REGION=us-central1
 PROJECT_ID=
 DATABASE_URL=
 STORAGE_BUCKET=
-NODE_VERSION=18
-FIREBASE_ADMIN=^10.0.0
+FIREBASE_ADMIN=6.5.0
 FIREBASE_APP_ID=
 FIREBASE_MEASUREMENT_ID=
 FIREBASE_AUTH_DOMAIN=
