--- a/integration_tests/.gitignore
+++ b/integration_tests/.gitignore
@@ -64,3 +64,7 @@ node_modules/
 
 # dotenv environment variables file
 .env
+/functions/functions.yaml
+/serviceAccount.json
+/functions/requirements.txt
+/functions/firebase_functions.tar.gz
