--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -70,11 +70,11 @@ jobs:
       - name: Lint with pylint
         run: |
           source venv/bin/activate
-          python3.10 -m pylint $(git ls-files '*.py')
+          python3.10 -m pylint src tests
       - name: Lint with mypy
         run: |
           source venv/bin/activate
-          python3.10 -m mypy .
+          python3.10 -m mypy src tests 
 
   docs:
     runs-on: ubuntu-latest
