--- a/integration_tests/.env.example
+++ b/integration_tests/.env.example
@@ -1,11 +1,13 @@
+DEBUG=true
+TEST_RUNTIME=node
 REGION=us-central1
 PROJECT_ID=
 DATABASE_URL=
 STORAGE_BUCKET=
-FIREBASE_ADMIN=6.5.0
+NODE_VERSION=18
+FIREBASE_ADMIN=^12.6.0
 FIREBASE_APP_ID=
 FIREBASE_MEASUREMENT_ID=
 FIREBASE_AUTH_DOMAIN=
 FIREBASE_API_KEY=
-GOOGLE_APPLICATION_CREDENTIALS=./serviceAccount.json
 GOOGLE_ANALYTICS_API_SECRET=
