--- a/integration_test/.env.example
+++ b/integration_test/.env.example
@@ -1,11 +1,9 @@
-DEBUG=true
-TEST_RUNTIME=node
+TEST_RUNTIME=python
 REGION=us-central1
 PROJECT_ID=
 DATABASE_URL=
 STORAGE_BUCKET=
-NODE_VERSION=18
-FIREBASE_ADMIN=^12.6.0
+FIREBASE_ADMIN=6.5.0
 FIREBASE_APP_ID=
 FIREBASE_MEASUREMENT_ID=
 FIREBASE_AUTH_DOMAIN=
