wip(integration_test): Install virtualenv

--- a/integration_test/builders/python-node/Dockerfile
+++ b/integration_test/builders/python-node/Dockerfile
@@ -1,6 +1,8 @@
 # Use a combined base image with Python 3.11 and Node 18
 FROM python:3.11
 
+RUN python -m pip install virtualenv
+
 # Install Node.js 18 using the Nodesource repository
 RUN apt-get update && \
     curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
