fix: FloatParam marked private as unsupported in CLI

--- a/.pylintrc
+++ b/.pylintrc
@@ -147,6 +147,7 @@ disable=abstract-method,
         xrange-builtin,
         zip-builtin-not-iterating,
         import-outside-toplevel,
+        protected-access,
 
 
 [REPORTS]
