--- a/samples/identity/functions/requirements.txt
+++ b/samples/identity/functions/requirements.txt
@@ -1,8 +1,8 @@
 # Not published yet,
 # firebase-functions-python >= 0.0.1
 # so we use a relative path during development:
-./../../../
+# ./../../../
 # Or switch to git ref for deployment testing:
-# git+https://github.com/firebase/firebase-functions-python.git@main#egg=firebase-functions
+git+https://github.com/firebase/firebase-functions-python.git@feat/before_email_sms_sent_blocking_fn#egg=firebase-functions
 
 firebase-admin >= 6.0.1
