--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,20 +16,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          version: "latest"
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
       - name: Install dependencies
         run: |
-          python${{ matrix.python }} -m venv venv
-          source venv/bin/activate 
-          pip3 install --upgrade pip 
-          python${{ matrix.python }} -m pip install -e ".[dev]"
+          uv sync --extra dev
       - name: Test with pytest & coverage
         run: |
-          source venv/bin/activate
-          python${{ matrix.python }} -m pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
+          uv run pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
       # TODO requires activation for this repository on codecov website first.
       # - name: Upload coverage to Codecov
       #   uses: codecov/codecov-action@v3
@@ -38,44 +38,43 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          version: "latest"
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python3.10 -m venv venv
-          source venv/bin/activate 
-          pip3 install --upgrade pip 
-          python3.10 -m pip install -e ".[dev]"
-      - name: Lint with pylint
+          uv sync --extra dev
+      - name: Lint with ruff
         run: |
-          source venv/bin/activate
-          python3.10 -m pylint $(git ls-files '*.py')
-      - name: Lint with mypy
+          uv run ruff check .
+      - name: Type check with mypy
         run: |
-          source venv/bin/activate
-          python3.10 -m mypy .
+          uv run mypy .
 
   docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          version: "latest"
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python3.10 -m venv venv
-          source venv/bin/activate 
-          pip3 install --upgrade pip 
-          python3.10 -m pip install -e ".[dev]"
+          uv sync --extra dev
       - name: Generate Reference Docs
         run: |
-          source venv/bin/activate
           mkdir ./docs/build
-          ./docs/generate.sh --out=./docs/build/ --pypath=src/
+          uv run ./docs/generate.sh --out=./docs/build/ --pypath=src/
       - uses: actions/upload-artifact@v4
         name: Upload Docs Preview
         with:
@@ -86,17 +85,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install uv
+        uses: astral-sh/setup-uv@v2
+        with:
+          version: "latest"
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
       - name: Install dependencies
         run: |
-          python3.10 -m venv venv
-          source venv/bin/activate 
-          pip3 install --upgrade pip 
-          python3.10 -m pip install -e ".[dev]"
-      - name: Check Formatting
+          uv sync --extra dev
+      - name: Check Formatting with ruff
         run: |
-          source venv/bin/activate
-          yapf -d -r -p .
+          uv run ruff format --check .
