--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,6 +36,11 @@ jobs:
     - name: Checkout source for staging
       uses: actions/checkout@v3
 
+    - name: Install uv
+      uses: astral-sh/setup-uv@v2
+      with:
+        version: "latest"
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -43,18 +48,16 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
-        python -m pip install -e ".[dev]"
+        uv sync --extra dev
 
     - name: Test with pytest & coverage
       run: |
-        python -m pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
+        uv run pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
 
     # Build the Python Wheel and the source distribution.
     - name: Package release artifacts
       run: |
-       python -m pip install setuptools wheel
-       python setup.py bdist_wheel sdist
+       uv run python -m build
 
     # Attach the packaged artifacts to the workflow output. These can be manually
     # downloaded for later inspection if necessary.
