--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ profile_default/
 ipython_config.py
 
 # pyenv
-.python-version
+# .python-version  # We're now tracking this for uv
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -139,3 +139,6 @@ doc/dist
 .idea
 .vscode/*
 !.vscode/settings.json
+
+# uv
+uv.lock
