fix: remove pylint/yapf and fix ruff import issues
- Remove pylint from CI workflow and setup.py
- Delete .pylintrc configuration file
- Remove yapf configuration from pyproject.toml
- Update CONTRIBUTING.md to use ruff commands
- Update VS Code settings to use ruff formatter and linter
- Fix missing imports that were removed during ruff import reorganization:
  - Restore Timezone export in scheduler_fn.py
  - Restore AlertType export in alerts_fn.py
- Format remaining files with ruff formatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,14 @@
 {
-  "python.linting.enabled": true,
-  "python.linting.pylintEnabled": false,
-  "python.formatting.provider": "yapf",
-  "python.formatting.yapfArgs": [
-    "--style",
-    "{based_on_style: google, indent_width: 4}"
-  ],
-  "python.linting.pylintPath": "pylint",
+  "[python]": {
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "explicit"
+    },
+    "editor.defaultFormatter": "charliermarsh.ruff"
+  },
+  "ruff.lint.enable": true,
+  "ruff.format.enable": true,
   "python.envFile": "${workspaceFolder}/venv",
-  "editor.formatOnSave": true,
-  "python.linting.lintOnSave": true,
   "python.linting.mypyEnabled": true,
   "mypy.dmypyExecutable": "${workspaceFolder}/venv/bin/dmypy",
   "files.autoSave": "afterDelay",
