feat: modernize packaging with pyproject.toml and uv
- Migrate package metadata from setup.py to pyproject.toml (PEP 621)
- Keep dynamic version reading from __init__.py for compatibility
- Use modern dependency-groups format (PEP 735) for dev dependencies
- Add uv for fast dependency management (10-100x faster than pip)
- Update all CI/CD workflows to use uv
- Add .python-version file for consistent Python version
- Update CONTRIBUTING.md with uv instructions
- Use modern build tool instead of setup.py commands
- Fix license format to use SPDX identifier

Benefits:
- Faster dependency installation and resolution with uv
- Modern Python packaging standards compliance
- Better dependency locking with uv.lock
- Simpler, more maintainable configuration
- Consistent Python version across environments

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,20 +41,23 @@ jobs:
       with:
         python-version: '3.10'
 
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
+      with:
+        enable-cache: true
+
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
-        python -m pip install -e ".[dev]"
+        uv sync --dev
 
     - name: Test with pytest & coverage
       run: |
-        python -m pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
+        uv run pytest --cov=src --cov-report term --cov-report html --cov-report xml -vv
 
     # Build the Python Wheel and the source distribution.
     - name: Package release artifacts
       run: |
-       python -m pip install setuptools wheel
-       python setup.py bdist_wheel sdist
+       uv run python -m build
 
     # Attach the packaged artifacts to the workflow output. These can be manually
     # downloaded for later inspection if necessary.
