--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,10 +48,10 @@ jobs:
           source venv/bin/activate 
           pip3 install --upgrade pip 
           python3.10 -m pip install -e ".[dev]"
-      - name: Lint with pylint
+      - name: Lint with ruff
         run: |
           source venv/bin/activate
-          python3.10 -m pylint $(git ls-files '*.py')
+          python3.10 -m ruff check .
       - name: Lint with mypy
         run: |
           source venv/bin/activate
@@ -96,7 +96,7 @@ jobs:
           source venv/bin/activate 
           pip3 install --upgrade pip 
           python3.10 -m pip install -e ".[dev]"
-      - name: Check Formatting
+      - name: Check Formatting with ruff
         run: |
           source venv/bin/activate
-          yapf -d -r -p .
+          python3.10 -m ruff format --check .
