--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,35 @@ pythonpath = [
 
     [tool.coverage.report]
     skip_empty = true
-[tool.yapf]
-based_on_style = "google"
-indent_width = 4
-[tool.yapfignore]
-ignore_patterns = [
-  "venv",
-  "build",
-  "dist",
+
+[tool.ruff]
+target-version = "py310"
+line-length = 100
+indent-width = 4
+
+[tool.ruff.lint]
+select = [
+    "E",      # pycodestyle errors
+    "W",      # pycodestyle warnings
+    "F",      # pyflakes
+    "I",      # isort
+    "UP",     # pyupgrade
+    "B",      # flake8-bugbear
+    "C4",     # flake8-comprehensions
+    "PL",     # pylint
 ]
+ignore = [
+    "PLR0913", # Too many arguments
+    "PLR0912", # Too many branches
+    "PLR0915", # Too many statements
+    "PLR2004", # Magic value used in comparison
+    "PLW0603", # Using the global statement
+    "PLC0415", # Import outside toplevel
+    "E501",    # Line too long (handled by formatter)
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
