fix(integration_tests): fix test framework for python

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,9 @@ dev = [
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-packages = ["firebase_functions"]
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.setuptools.package-data]
 firebase_functions = ["py.typed"]
