--- a/integration_test/cloudbuild-v1.yaml
+++ b/integration_test/cloudbuild-v1.yaml
@@ -1,5 +1,6 @@
 # Cloud Build configuration for Firebase Functions V1 Integration Tests (Python)
 # Runs V1 test suites on functions-integration-tests project
+# Following the same pattern as JS SDK for reliability
 
 options:
   machineType: 'E2_HIGHCPU_8'
@@ -11,7 +12,25 @@ substitutions:
   _PROJECT_ID: 'functions-integration-tests'  # V1 project
 
 steps:
-  # Build Python SDK and run V1 test suites
+  # Create storage bucket for test results if it doesn't exist
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:stable'
+    id: 'create-bucket'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        # Create bucket for test results if it doesn't exist
+        BUCKET_NAME="gs://${_PROJECT_ID}-test-results"
+        echo "Checking if bucket $$BUCKET_NAME exists..."
+        if ! gsutil ls "$$BUCKET_NAME" &>/dev/null; then
+          echo "Creating bucket $$BUCKET_NAME..."
+          gsutil mb -p "${_PROJECT_ID}" "$$BUCKET_NAME"
+        else
+          echo "Bucket $$BUCKET_NAME already exists"
+        fi
+
+  # Step 1: Build Python SDK wheel
+  # NOTE: Build is now submitted from repo root, so /workspace = repo root
   - name: 'python:3.11'
     id: 'build-python-sdk'
     entrypoint: 'bash'
@@ -22,67 +41,108 @@ steps:
         echo "Installing uv..."
         pip install uv
 
-        # Step 1: Build the firebase-functions Python SDK from source
+        # Verify we're in the repo root
+        echo "Current directory: $(pwd)"
+        ls -la pyproject.toml
+
+        # Build the firebase-functions Python SDK from source
         echo "Building firebase-functions Python SDK from source..."
         uv build
 
-        # Move the wheel to where integration tests expect it
-        cp dist/*.whl integration_test/firebase-functions-python-local.whl
+        # Copy the wheel to integration_test directory (preserve original filename)
+        echo "Copying wheel to integration_test directory..."
+        cp dist/*.whl integration_test/
+
+        # Verify the wheel was copied and show actual filename
+        echo "Checking if wheel exists..."
+        WHEEL_FILE=$$(ls integration_test/*.whl 2>/dev/null | head -n 1)
+        if [ -n "$$WHEEL_FILE" ]; then
+          ls -lh "$$WHEEL_FILE"
+          echo "✅ Wheel exists at: $$WHEEL_FILE"
+        else
+          echo "❌ ERROR: No wheel file found in integration_test/"
+          ls -la integration_test/ || echo "integration_test directory doesn't exist"
+          exit 1
+        fi
+
         echo "Python SDK built and packaged successfully"
 
+  # Step 2: Run V1 integration tests using unified test runner
   - name: 'node:20'
     id: 'run-v1-tests'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
+        set -e  # Exit on error
+
+        # Install Python 3.11, gcloud, and other dependencies in node:20 image
+        echo "Installing Python 3.11 and gcloud..."
+        apt-get update -qq
+        apt-get install -y -qq python3.11 python3.11-venv python3-pip curl apt-transport-https ca-certificates gnupg
+
+        # Install gcloud SDK
+        echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+        curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+        apt-get update -qq && apt-get install -y -qq google-cloud-sdk
+
+        # Verify installations
+        python3.11 --version
+        gcloud --version
+
+        # Change to integration_test directory
+        # NOTE: /workspace is now repo root, so cd into integration_test
         cd integration_test
 
-        # Install test dependencies
-        echo "Installing test dependencies..."
+        # Debug: Check current directory and contents
+        echo "Current directory: $(pwd)"
+        ls -la
+
+        # Install Node.js test dependencies
+        echo "Installing Node.js dependencies..."
         npm ci
 
         # Install firebase-tools globally
+        echo "Installing Firebase CLI..."
         npm install -g firebase-tools
 
-        # Verify firebase is installed
+        # Verify tools are installed
         firebase --version
+        node --version
 
-        # Set project for V1 tests
+        # Create logs directory
+        mkdir -p logs
+
+        # Set project ID for V1 tests
         export PROJECT_ID=${_PROJECT_ID}
         echo "Running V1 tests on project: ${PROJECT_ID}"
 
-        # Generate V1 functions
-        echo "Generating V1 Python functions..."
-        node scripts/generate.js 'v1_*'
+        # Debug: Check if wheel file exists in /workspace
+        echo "Checking for wheel file..."
+        ls -lh firebase-functions-python-local.whl || echo "❌ Wheel not found in /workspace"
 
-        # Deploy functions
-        echo "Deploying V1 functions to ${PROJECT_ID}..."
-        cd generated/functions
+        # Use unified test runner (handles generate, deploy, test, cleanup automatically)
+        # Testing only v1_firestore (the only template that currently exists)
+        echo "Running v1_firestore integration tests..."
 
-        # Create virtual environment and install dependencies
-        python3 -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
+        # Find the actual wheel filename
+        WHEEL_FILE=$$(ls firebase*.whl 2>/dev/null | head -n 1)
+        if [ -z "$$WHEEL_FILE" ]; then
+          echo "❌ ERROR: No wheel file found"
+          exit 1
+        fi
+        echo "Using wheel: $$WHEEL_FILE"
 
-        # Deploy to Firebase
-        firebase deploy --only functions --project ${PROJECT_ID}
-
-        # Return to test directory
-        cd ../..
-
-        # Run V1 tests sequentially
-        echo "Running V1 integration tests..."
-        npm run test:v1:all:sequential
-
-        # Clean up deployed functions
-        echo "Cleaning up deployed functions..."
-        ./scripts/cleanup-suite.sh --project ${PROJECT_ID}
+        node scripts/run-tests.js \
+          --sequential \
+          v1_firestore \
+          --use-published-sdk=file:$$WHEEL_FILE
 
 # Artifacts to store
+# NOTE: Paths are relative to /workspace which is now repo root
 artifacts:
   objects:
     location: 'gs://${_PROJECT_ID}-test-results/${BUILD_ID}'
     paths:
-      - 'integration_test/logs/**/*.log'
+      - 'integration_test/logs/*.log'
       - 'integration_test/generated/.metadata.json'
