--- a/integration_test/config/suites.yaml
+++ b/integration_test/config/suites.yaml
@@ -1,6 +1,5 @@
 # Firebase Functions Python Integration Test Suites Configuration
-# Python SDK only supports 2nd gen functions - all tests deploy to functions-integration-tests-v2
-# Contains both V1 and V2 API suites (refers to Firebase service API versions, not Cloud Functions generations)
+# Python SDK only supports V2 APIs - all tests deploy to functions-integration-tests-v2
 
 defaults:
   projectId: functions-integration-tests-v2
@@ -13,142 +12,7 @@ defaults:
 
 suites:
   # ============================================================================
-  # V1 API Suites (Firebase service V1 APIs as 2nd gen Cloud Functions)
-  # ============================================================================
-
-  # Firestore triggers
-  - name: v1_firestore
-    description: "V1 Firestore trigger tests for Python"
-    version: v1
-    service: firestore
-    functions:
-      - name: firestoreDocumentOnCreateTests
-        trigger: onCreate
-        document: "tests/{testId}"
-      - name: firestoreDocumentOnDeleteTests
-        trigger: onDelete
-        document: "tests/{testId}"
-      - name: firestoreDocumentOnUpdateTests
-        trigger: onUpdate
-        document: "tests/{testId}"
-      - name: firestoreDocumentOnWriteTests
-        trigger: onWrite
-        document: "tests/{testId}"
-
-  # Realtime Database triggers
-  - name: v1_database
-    description: "V1 Realtime Database trigger tests for Python"
-    version: v1
-    service: database
-    functions:
-      - name: databaseRefOnCreateTests
-        trigger: onCreate
-        path: "dbTests/{testId}/start"
-      - name: databaseRefOnDeleteTests
-        trigger: onDelete
-        path: "dbTests/{testId}/start"
-      - name: databaseRefOnUpdateTests
-        trigger: onUpdate
-        path: "dbTests/{testId}/start"
-      - name: databaseRefOnWriteTests
-        trigger: onWrite
-        path: "dbTests/{testId}/start"
-
-  # Pub/Sub triggers
-  - name: v1_pubsub
-    description: "V1 Pub/Sub trigger tests for Python"
-    version: v1
-    service: pubsub
-    functions:
-      - name: pubsubOnPublish
-        trigger: onPublish
-        topic: "firebase-functions-pubsub-test"
-      - name: pubsubOnPublishBinary
-        trigger: onPublish
-        topic: "firebase-functions-pubsub-test-binary"
-      - name: pubsubOnMessagePublished
-        trigger: onMessagePublished
-        topic: "firebase-functions-pubsub-message"
-
-  # Storage triggers
-  - name: v1_storage
-    description: "V1 Storage trigger tests for Python"
-    version: v1
-    service: storage
-    functions:
-      - name: storageOnObjectArchive
-        trigger: onArchive
-        bucket: "{{projectId}}.appspot.com"
-      - name: storageOnObjectDelete
-        trigger: onDelete
-        bucket: "{{projectId}}.appspot.com"
-      - name: storageOnObjectFinalize
-        trigger: onFinalize
-        bucket: "{{projectId}}.appspot.com"
-      - name: storageOnObjectMetadataUpdate
-        trigger: onMetadataUpdate
-        bucket: "{{projectId}}.appspot.com"
-
-  # Auth triggers
-  - name: v1_auth_nonblocking
-    description: "V1 Auth non-blocking trigger tests for Python"
-    version: v1
-    service: auth
-    functions:
-      - name: authOnCreate
-        trigger: onCreate
-      - name: authOnDelete
-        trigger: onDelete
-
-  # Auth blocking triggers
-  # Commented out due to Cloud Tasks integration issues
-  # - name: v1_auth_before_create
-  #   description: "V1 Auth beforeCreate blocking trigger tests for Python"
-  #   version: v1
-  #   service: auth
-  #   functions:
-  #     - name: authBeforeCreate
-  #       trigger: beforeCreate
-
-  # - name: v1_auth_before_signin
-  #   description: "V1 Auth beforeSignIn blocking trigger tests for Python"
-  #   version: v1
-  #   service: auth
-  #   functions:
-  #     - name: authBeforeSignIn
-  #       trigger: beforeSignIn
-
-  # Remote Config triggers
-  - name: v1_remoteconfig
-    description: "V1 Remote Config trigger tests for Python"
-    version: v1
-    service: remoteconfig
-    functions:
-      - name: remoteConfigOnUpdate
-        trigger: onUpdate
-
-  # Test Lab triggers
-  - name: v1_testlab
-    description: "V1 Test Lab trigger tests for Python"
-    version: v1
-    service: testlab
-    functions:
-      - name: testLabOnComplete
-        trigger: onComplete
-
-  # Task Queue functions
-  # Commented out due to authentication/permission issues
-  # - name: v1_tasks
-  #   description: "V1 Task Queue function tests for Python"
-  #   version: v1
-  #   service: tasks
-  #   functions:
-  #     - name: taskQueueFunction
-  #       trigger: onDispatch
-  #       queueName: "test-queue"
-
-  # ============================================================================
-  # V2 API Suites (Firebase service V2 APIs as 2nd gen Cloud Functions)
+  # V2 API Suites (Python SDK only supports V2 Firebase APIs)
   # ============================================================================
 
   # V2 Firestore triggers
@@ -159,16 +23,20 @@ suites:
     functions:
       - name: firestoreOnDocumentCreated
         trigger: onDocumentCreated
-        document: "v2tests/{testId}"
+        document: "tests/{testId}"
+        collection: firestoreOnDocumentCreatedTests
       - name: firestoreOnDocumentDeleted
         trigger: onDocumentDeleted
-        document: "v2tests/{testId}"
+        document: "tests/{testId}"
+        collection: firestoreOnDocumentDeletedTests
       - name: firestoreOnDocumentUpdated
         trigger: onDocumentUpdated
-        document: "v2tests/{testId}"
+        document: "tests/{testId}"
+        collection: firestoreOnDocumentUpdatedTests
       - name: firestoreOnDocumentWritten
         trigger: onDocumentWritten
-        document: "v2tests/{testId}"
+        document: "tests/{testId}"
+        collection: firestoreOnDocumentWrittenTests
 
   # V2 Realtime Database triggers
   - name: v2_database
@@ -178,16 +46,20 @@ suites:
     functions:
       - name: databaseOnValueCreated
         trigger: onValueCreated
-        path: "v2tests/{testId}/start"
+        path: "databaseCreatedTests/{testId}/start"
+        collection: databaseCreatedTests
       - name: databaseOnValueDeleted
         trigger: onValueDeleted
-        path: "v2tests/{testId}/start"
+        path: "databaseDeletedTests/{testId}/start"
+        collection: databaseDeletedTests
       - name: databaseOnValueUpdated
         trigger: onValueUpdated
-        path: "v2tests/{testId}/start"
+        path: "databaseUpdatedTests/{testId}/start"
+        collection: databaseUpdatedTests
       - name: databaseOnValueWritten
         trigger: onValueWritten
-        path: "v2tests/{testId}/start"
+        path: "databaseWrittenTests/{testId}/start"
+        collection: databaseWrittenTests
 
   # V2 Pub/Sub triggers
   - name: v2_pubsub
