--- a/integration_test/cloudbuild.yaml
+++ b/integration_test/cloudbuild.yaml
@@ -130,7 +130,7 @@ steps:
 
         node scripts/run-tests.js \
           --sequential \
-          v2_firestore v2_database \
+          v2_firestore v2_database v2_storage \
           --use-published-sdk=file:$$WHEEL_FILE
 
 # Artifacts to store
