feat(integration_test): add eventarc and pubsub suites

--- a/integration_test/cloudbuild.yaml
+++ b/integration_test/cloudbuild.yaml
@@ -130,7 +130,7 @@ steps:
 
         node scripts/run-tests.js \
           --sequential \
-          v2_firestore v2_database v2_storage \
+          v2_firestore v2_database v2_storage v2_pubsub v2_eventarc \
           --use-published-sdk=file:$$WHEEL_FILE
 
 # Artifacts to store
